finished RF coupling chapter

--- a/master.tex
+++ b/master.tex
@@ -293,8 +293,10 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 	% RF Coupling
 	\input{tex/chap2.tex}
 
-	% RF Components	
+	% RF Components	ICRF
 	\input{tex/chap_high_power_icrf.tex}
+	
+	% RF Components LHRF
 	\input{tex/chap_high_power_lhrf.tex}
 	
 	% Multipactor
