--- a/tex/chap1.tex
+++ b/tex/chap1.tex
@@ -1,5 +1,5 @@
 % controlled fusion and RF heating and current drive
-%\chaptertoc{}
+\setchapterimage[3.3cm]{figures/chap1/chapter_head} % Optionally specify theheight
 \setchapterpreamble[u]{\margintoc}
 \chapter{Controlled Fusion, RF heating and Current Drive}
 \label{chap:fusion_and_rf}
@@ -262,7 +262,7 @@ Thus, to run in steady-state, a tokamak requires the plasma current to be sustai
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Radio frequency Heating and Current Drive}
+\section[RF Heating and Current Drive]{Radio frequency Heating and Current Drive}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{General Principles}
