--- a/tex/chap_high_power_lhrf.tex
+++ b/tex/chap_high_power_lhrf.tex
@@ -1,6 +1,7 @@
 % #####################################################
 % #####################################################
 % #####################################################
+\setchapterimage{figures/chap1/chapter_head} % Optionally specify theheight
 \setchapterpreamble[u]{\margintoc}
 \chapter{High Power RF Devices for the Lower Hybrid Range of Frequency}\label{eq:LHRF_work}
 
